fixed servicedetail title size on mobile

--- a/src/utils/components/servicesComponents/serviceDetails/serviceDetails.module.css
+++ b/src/utils/components/servicesComponents/serviceDetails/serviceDetails.module.css
@@ -12,7 +12,7 @@
 
 @media screen and (max-width: 480px) {
     .container { display: flex; flex-direction: column; gap:2vw; min-height: 40.53vw ;margin: 3.13vw 0vw 2.60vw }
-    .title { font-size: 11.53vw; line-height: 1.3; color: var(--t-primary); font-weight: 700;margin-bottom: 0 }
+    .title { font-size: 8.5vw; line-height: 1.3; color: var(--t-primary); font-weight: 700;margin-bottom: 0 }
     .textContainer { display: flex; flex-direction: column; gap: 0 }
     .text { font-size: 3.87vw; color: var(--t-thri); line-height: 7.28vw }
 }
